# COHPL

./: CMakeLists.txt  FractionSmartPointer.cpp  README.md  array_utils.c  callback.c  fraction.cpp  main.c  main.cpp  mem.c  program_debug  stack.cpp  utils.cpp
include/: array_utils.h  callback.h  fraction.h  mem.h  smart_pointer.h  stack.h  stack.h.gch  utils.h
new-test/: a.out  main.cpp  stack.cpp  stack_priv.cpp
new-test/include/: stack_agg.h  stack_priv.h
